# dataScience-service

./: Dockerfile  pyproject.toml
src/app/: __init__.py
src/app/service/: Expense.py  llmService.py  messageService.py
src/ds_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
